[gd_scene load_steps=5 format=2]

[ext_resource path="res://source/scripts/core/gameplay_scene_base.gd" type="Script" id=1]
[ext_resource path="res://source/nodes/scenes/scene_base.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/nodes/game_input.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/scripts/visuals/colorblind_mode.gd" type="Script" id=4]

[node name="GameplaySceneBase" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="GameInput" parent="." index="2" instance=ExtResource( 3 )]

[node name="ColorblindMode" type="Node" parent="." index="3"]
script = ExtResource( 4 )
